--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -143,7 +143,7 @@
         android:inputType="numberSigned" />
 
     <Button
-        android:id="@+id/BtnAdd"
+        android:id="@+id/BtnAddTeam"
         android:layout_width="152dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
