--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/main_menu_title"
         android:textSize="24sp"
-        android:textColor="#4169E1"
+        android:textColor="#0b163e"
         android:gravity="center"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
