--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#69B369</color>
+    <color name="colorPrimaryDark">#0b163e</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="button_color">#FF5722</color>
+    <color name="button_color">#69B369</color>
     <color name="title_color">#FF5722</color>
 </resources>
+
